# immich-analyze

./: .gitignore  Cargo.toml  Dockerfile  README.md  clippy.toml  docker-compose.yml  entrypoint.sh
.github/workflows/: docker-publish.yml  rust.yml  typos.yml  update-flake.yml
locales/: app.yaml
src/: args.rs  config.rs  data_access.rs  database.rs  error.rs  file_processing.rs  health.rs  host_manager.rs  immich_api.rs  llamacpp.rs  main.rs  monitor.rs  ollama.rs  progress.rs  prompt_enricher.rs  utils.rs
