[package]
name = "immich-analyze"
version = "0.3.1"
edition = "2024"
description = "AI-powered image description generator for Immich photo management system"
authors = ["timasoft <tima.klester@yandex.ru>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/timasoft/immich-analyze"
keywords = ["immich", "ai", "image-analysis", "ollama", "photo-management"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
base64 = "0.22"
chrono = "0.4.44"
clap = { version = "4.6", features = ["derive", "env"] }
env_logger = "0.11"
futures = "0.3"
log = "0.4"
notify = "8.2"
regex = "1.12"
reqwest = { version = "0.13", features = ["json"] }
rust-i18n = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.52", features = ["rt-multi-thread", "signal", "macros", "fs"] }
tokio-postgres = "0.7"
url = "2.5.8"
uuid = { version = "1.23", features = ["serde"] }

[profile.release]
lto = "thin"
codegen-units = 16
panic = "abort"
strip = true
opt-level = 3
