[package]
name = "immich-analyze"
version = "0.3.1"
edition = "2024"
description = "AI-powered image description generator for Immich photo management system"
authors = ["timasoft <tima.klester@yandex.ru>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/timasoft/immich-analyze"
keywords = ["immich", "ai", "image-analysis", "ollama", "photo-management"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
base64 = "0.22"
chrono = "0.4.44"
clap = { version = "4.6", features = ["derive", "env"] }
env_logger = "0.11"
futures = "0.3"
log = "0.4"
notify = "8.2"
regex = "1.12"
reqwest = { version = "0.13", features = ["json"] }
rust-i18n = "4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.52", features = ["rt-multi-thread", "signal", "macros", "fs"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
url = "2.5.8"
uuid = { version = "1.23", features = ["serde"] }

[lints.clippy]
uninlined_format_args = "warn"
doc_markdown = "warn"
trivially_copy_pass_by_ref = "warn"
missing_const_for_fn = "warn"
unused_async = "warn"
ignored_unit_patterns = "warn"
map_unwrap_or = "warn"
match_wildcard_for_single_variants = "warn"
unnecessary_wraps = "warn"
significant_drop_tightening = "warn"
single_match_else = "warn"
match_same_arms = "warn"
derivable_impls = "warn"
or_fun_call = "warn"
redundant_closure = "warn"
unwrap_used = "warn"
cargo = "warn"

[profile.release]
lto = "thin"
codegen-units = 16
panic = "abort"
strip = true
opt-level = 3
