[package]
name = "immich-analyze"
version = "0.4.2"
edition = "2024"
description = "AI-powered image description generator for Immich photo management system"
authors = ["timasoft <tima.klester@yandex.ru>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/timasoft/immich-analyze"
keywords = ["immich", "ai", "image-analysis", "ollama", "photo-management"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
base64 = "0.22"
chrono = "0.4.44"
clap = { version = "4.6", features = ["derive", "env"] }
env_logger = "0.11"
futures = "0.3"
log = "0.4"
notify = "8.2"
regex = "1.12"
reqwest = { version = "0.13", features = ["json"] }
rust-i18n = "4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.52", features = ["rt-multi-thread", "signal", "macros", "fs"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
url = "2.5.8"
uuid = { version = "1.23", features = ["serde"] }

[lints.clippy]
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

multiple_crate_versions = "allow"

allow_attributes = "warn"
arithmetic_side_effects = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_numeric_fallback = "warn"
exit = "warn"
field_scoped_visibility_modifiers = "warn"
fn_to_numeric_cast_any = "warn"
indexing_slicing = "warn"
iter_over_hash_type = "warn"
let_underscore_untyped = "warn"
lossy_float_literal = "warn"
map_with_unused_argument_over_ranges = "warn"
min_ident_chars = "warn"
mixed_read_write_in_expression = "warn"
module_name_repetitions = "warn"
multiple_inherent_impl = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
needless_raw_strings = "warn"
non_zero_suggestions = "warn"
panic = "warn"
partial_pub_fields = "warn"
precedence_bits = "warn"
pub_without_shorthand = "warn"
rc_mutex = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
shadow_reuse = "warn"
str_to_string = "warn"
string_add = "warn"
string_lit_chars_any = "warn"
todo = "warn"
unimplemented = "warn"
unseparated_literal_suffix = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
use_debug = "warn"

[profile.release]
lto = "thin"
codegen-units = 16
panic = "abort"
strip = true
opt-level = 3
